Várias alterações feitas

--- a/index.html
+++ b/index.html
@@ -89,8 +89,33 @@
     <!-- Conteúdo Principal -->
     <main>
         <section class="banner">
-            <h1>Bem-vindo</h1>
-            <h2>Desenvolvimento de Sites</h2>
+            <h2>Bem-vindo</h2>
+            <h1>Desenvolvimento de Sites</h1>
+        </section>
+
+        <section class="sobre-mim">
+            <div class="sobre-mim-titulo">
+                <h2>Sobre mim</h2>
+                <div id="linha-azul"></div>
+            </div>
+
+            <div class="container-sobre-descricao">
+                <div class="container-sobre-descricao-esquerdo">
+                    <h3>Olá, me chamo <span id="nome-azul">Fábio Sousa</span> sou desenvolvedor de sites.</h3><br>
+
+                    <p>Tenho mais de 3 anos de experiência no desenvolvimento e manutenção de sites utilizando WordPress (com o construtor de páginas Elementor), HTML, CSS, JS, MySQL, além de integrações com ferramentas de automação como o Zapier.</p><br>
+
+                    <p>Também possuo conhecimento em configurar e implantar sites em diferentes plataformas de hospedagem, garantindo sua disponibilidade e desempenho otimizado, incluindo integração com o Cloudflare para melhorias de segurança e desempenho.</p>
+                </div>
+
+                <div class="container-sobre-descricao-direito">
+                    <ul>
+                        <li><span>Nome:</span> Fábio Sousa</li>
+                        <li><span>Email:</span> </li>
+                        <li><span>WhatsApp:</span> </li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
 
