--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <nav class="menu">
                     <a href="#">Início</a>
-                    <a href="#">Sobre mim</a>
+                    <a href="#sobre">Sobre mim</a>
                     <a href="#">Portfólio</a>
                     <a href="#">Contato</a>
                     <a href="#" id="whatsapp-button"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -91,9 +91,58 @@
         <section class="banner">
             <h2>Bem-vindo</h2>
             <h1>Desenvolvimento de Sites</h1>
+            <div class="icon-linguagens">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
+                    <path fill="#E65100" d="M41,5H7l3,34l14,4l14-4L41,5L41,5z"></path>
+                    <path fill="#FF6D00" d="M24 8L24 39.9 35.2 36.7 37.7 8z"></path>
+                    <path fill="#FFF"
+                        d="M24,25v-4h8.6l-0.7,11.5L24,35.1v-4.2l4.1-1.4l0.3-4.5H24z M32.9,17l0.3-4H24v4H32.9z"></path>
+                    <path fill="#EEE"
+                        d="M24,30.9v4.2l-7.9-2.6L15.7,27h4l0.2,2.5L24,30.9z M19.1,17H24v-4h-9.1l0.7,12H24v-4h-4.6L19.1,17z">
+                    </path>
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
+                    <path fill="#0277BD" d="M41,5H7l3,34l14,4l14-4L41,5L41,5z"></path>
+                    <path fill="#039BE5" d="M24 8L24 39.9 35.2 36.7 37.7 8z"></path>
+                    <path fill="#FFF"
+                        d="M33.1 13L24 13 24 17 28.9 17 28.6 21 24 21 24 25 28.4 25 28.1 29.5 24 30.9 24 35.1 31.9 32.5 32.6 21 32.6 21z">
+                    </path>
+                    <path fill="#EEE"
+                        d="M24,13v4h-8.9l-0.3-4H24z M19.4,21l0.2,4H24v-4H19.4z M19.8,27h-4l0.3,5.5l7.9,2.6v-4.2l-4.1-1.4L19.8,27z">
+                    </path>
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
+                    <path fill="#ffd600" d="M6,42V6h36v36H6z"></path>
+                    <path fill="#000001"
+                        d="M29.538 32.947c.692 1.124 1.444 2.201 3.037 2.201 1.338 0 2.04-.665 2.04-1.585 0-1.101-.726-1.492-2.198-2.133l-.807-.344c-2.329-.988-3.878-2.226-3.878-4.841 0-2.41 1.845-4.244 4.728-4.244 2.053 0 3.528.711 4.592 2.573l-2.514 1.607c-.553-.988-1.151-1.377-2.078-1.377-.946 0-1.545.597-1.545 1.377 0 .964.6 1.354 1.985 1.951l.807.344C36.452 29.645 38 30.839 38 33.523 38 36.415 35.716 38 32.65 38c-2.999 0-4.702-1.505-5.65-3.368L29.538 32.947zM17.952 33.029c.506.906 1.275 1.603 2.381 1.603 1.058 0 1.667-.418 1.667-2.043V22h3.333v11.101c0 3.367-1.953 4.899-4.805 4.899-2.577 0-4.437-1.746-5.195-3.368L17.952 33.029z">
+                    </path>
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
+                    <path fill="#fff"
+                        d="M24 4.050000000000001A19.95 19.95 0 1 0 24 43.95A19.95 19.95 0 1 0 24 4.050000000000001Z">
+                    </path>
+                    <path fill="#01579b"
+                        d="M8.001,24c0,6.336,3.68,11.806,9.018,14.4L9.385,17.488C8.498,19.479,8.001,21.676,8.001,24z M34.804,23.194c0-1.977-1.063-3.35-1.67-4.412c-0.813-1.329-1.576-2.437-1.576-3.752c0-1.465,1.471-2.84,3.041-2.84 c0.071,0,0.135,0.006,0.206,0.008C31.961,9.584,28.168,8,24.001,8c-5.389,0-10.153,2.666-13.052,6.749 c0.228,0.074,0.307,0.039,0.611,0.039c1.669,0,4.264-0.2,4.264-0.2c0.86-0.057,0.965,1.212,0.099,1.316c0,0-0.864,0.105-1.828,0.152 l5.931,17.778l3.5-10.501l-2.603-7.248c-0.861-0.046-1.679-0.152-1.679-0.152c-0.862-0.056-0.762-1.375,0.098-1.316 c0,0,2.648,0.2,4.217,0.2c1.675,0,4.264-0.2,4.264-0.2c0.861-0.057,0.965,1.212,0.104,1.316c0,0-0.87,0.105-1.832,0.152l5.891,17.61 l1.599-5.326C34.399,26.289,34.804,24.569,34.804,23.194z M24.281,25.396l-4.8,13.952c1.436,0.426,2.95,0.652,4.52,0.652 c1.861,0,3.649-0.324,5.316-0.907c-0.04-0.071-0.085-0.143-0.118-0.22L24.281,25.396z M38.043,16.318 c0.071,0.51,0.108,1.059,0.108,1.645c0,1.628-0.306,3.451-1.219,5.737l-4.885,14.135C36.805,35.063,40,29.902,40,24 C40,21.219,39.289,18.604,38.043,16.318z">
+                    </path>
+                    <path fill="#01579b"
+                        d="M4,24c0,11.024,8.97,20,19.999,20C35.03,44,44,35.024,44,24S35.03,4,24,4S4,12.976,4,24z M5.995,24 c0-9.924,8.074-17.999,18.004-17.999S42.005,14.076,42.005,24S33.929,42.001,24,42.001C14.072,42.001,5.995,33.924,5.995,24z">
+                    </path>
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
+                    <path fill="#FDD835"
+                        d="M41.008 26.487L40.4 24.249 44.096 23.56 40.427 22.733 43.88 21.24 40.119 21.25 43.151 19.028 39.488 19.875 41.948 17.033 38.564 18.675 40.331 15.355 37.398 17.709 38.383 14.079 36.049 17.028 36.197 13.27 34.579 16.663 33.89 12.966 33.064 16.636 31.57 13.184 31.58 16.944 29.969 17.372 27.362 15.115 29.005 18.498 25.686 16.732 28.039 19.662 24.409 18.68 27.356 21.015 23.601 20.864 26.993 22.484 23.296 23.173 26.966 23.999 24.941 24.875 17.125 24.875 17.125 29.5 34.461 29.5 39 30 38.827 29.5 39 29.5 39 28.56 39.515 28.834 40.771 28.834 39.354 27.07 42.984 28.053z">
+                    </path>
+                    <path fill="#F57C00"
+                        d="M38.265,23.789c-0.884,0-1.708,0.218-2.454,0.573l2.564,4.763l-4-3.875l-15,4.375l13.75-5.25L25.5,21.5l9.041,2.083l0.262,0.053c0.008,0.028,0.035-0.366,0.035-0.769c0-5.25-4.267-9.505-9.533-9.505c-4.374,0-8.057,2.938-9.178,6.946c-0.746-0.701-1.748-1.134-2.85-1.134c-2.303,0-4.166,1.861-4.166,4.154c0,0.46,0.077,0.906,0.216,1.318c-0.192-0.016-0.389-0.028-0.586-0.028C5.57,24.619,3,27.18,3,30.34c0,0.577,0.089,1.136,0.249,1.66h40.173C43.789,31.247,44,30.403,44,29.513C44,26.348,41.432,23.789,38.265,23.789z">
+                    </path>
+                    <path fill="#FFB74D"
+                        d="M25.5 19c2.851 0 5.453 1.043 7.463 2.761C32.591 17.967 29.391 15 25.5 15s-7.091 2.967-7.463 6.761C20.047 20.043 22.649 19 25.5 19zM14.737 22.026C14.395 21.417 13.749 21 13 21c-1.104 0-2 .896-2 2 0 .465.165.888.432 1.228C12.049 22.987 13.282 22.123 14.737 22.026zM7.05 32c.251-2.734 2.482-4.895 5.259-4.99C11.537 26.388 10.568 26 9.5 26 7.015 26 5 28.015 5 30.5c0 .529.102 1.031.271 1.5H7.05z">
+                    </path>
+                </svg>
+            </div>
         </section>
 
-        <section class="sobre-mim">
+        <section class="sobre-mim" id="sobre">
             <div class="sobre-mim-titulo">
                 <h2>Sobre mim</h2>
                 <div id="linha-azul"></div>
@@ -103,16 +152,20 @@
                 <div class="container-sobre-descricao-esquerdo">
                     <h3>Olá, me chamo <span id="nome-azul">Fábio Sousa</span> sou desenvolvedor de sites.</h3><br>
 
-                    <p>Tenho mais de 3 anos de experiência no desenvolvimento e manutenção de sites utilizando WordPress (com o construtor de páginas Elementor), HTML, CSS, JS, MySQL, além de integrações com ferramentas de automação como o Zapier.</p><br>
+                    <p>Tenho mais de 3 anos de experiência no desenvolvimento e manutenção de sites utilizando WordPress
+                        (com o construtor de páginas Elementor), HTML, CSS, JS, MySQL, além de integrações com
+                        ferramentas de automação como o Zapier.</p><br>
 
-                    <p>Também possuo conhecimento em configurar e implantar sites em diferentes plataformas de hospedagem, garantindo sua disponibilidade e desempenho otimizado, incluindo integração com o Cloudflare para melhorias de segurança e desempenho.</p>
+                    <p>Também possuo conhecimento em configurar e implantar sites em diferentes plataformas de
+                        hospedagem, garantindo sua disponibilidade e desempenho otimizado, incluindo integração com o
+                        Cloudflare para melhorias de segurança e desempenho.</p>
                 </div>
 
                 <div class="container-sobre-descricao-direito">
                     <ul>
                         <li><span>Nome:</span> Fábio Sousa</li>
-                        <li><span>Email:</span> </li>
-                        <li><span>WhatsApp:</span> </li>
+                        <li><span>Email:</span> <a href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a> </li>
+                        <li><span>WhatsApp:</span> <a href="#">(85) 9 9999-9999</a></li>
                     </ul>
                 </div>
             </div>
