--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                     <path fill="#EEE"
                         d="M24,30.9v4.2l-7.9-2.6L15.7,27h4l0.2,2.5L24,30.9z M19.1,17H24v-4h-9.1l0.7,12H24v-4h-4.6L19.1,17z">
                     </path>
+                    <title>HTML5</title>
                 </svg>
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
                     <path fill="#0277BD" d="M41,5H7l3,34l14,4l14-4L41,5L41,5z"></path>
@@ -110,12 +111,14 @@
                     <path fill="#EEE"
                         d="M24,13v4h-8.9l-0.3-4H24z M19.4,21l0.2,4H24v-4H19.4z M19.8,27h-4l0.3,5.5l7.9,2.6v-4.2l-4.1-1.4L19.8,27z">
                     </path>
+                    <title>CSS</title>
                 </svg>
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
                     <path fill="#ffd600" d="M6,42V6h36v36H6z"></path>
                     <path fill="#000001"
                         d="M29.538 32.947c.692 1.124 1.444 2.201 3.037 2.201 1.338 0 2.04-.665 2.04-1.585 0-1.101-.726-1.492-2.198-2.133l-.807-.344c-2.329-.988-3.878-2.226-3.878-4.841 0-2.41 1.845-4.244 4.728-4.244 2.053 0 3.528.711 4.592 2.573l-2.514 1.607c-.553-.988-1.151-1.377-2.078-1.377-.946 0-1.545.597-1.545 1.377 0 .964.6 1.354 1.985 1.951l.807.344C36.452 29.645 38 30.839 38 33.523 38 36.415 35.716 38 32.65 38c-2.999 0-4.702-1.505-5.65-3.368L29.538 32.947zM17.952 33.029c.506.906 1.275 1.603 2.381 1.603 1.058 0 1.667-.418 1.667-2.043V22h3.333v11.101c0 3.367-1.953 4.899-4.805 4.899-2.577 0-4.437-1.746-5.195-3.368L17.952 33.029z">
                     </path>
+                    <title>JavaScript</title>
                 </svg>
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
                     <path fill="#fff"
@@ -127,6 +130,7 @@
                     <path fill="#01579b"
                         d="M4,24c0,11.024,8.97,20,19.999,20C35.03,44,44,35.024,44,24S35.03,4,24,4S4,12.976,4,24z M5.995,24 c0-9.924,8.074-17.999,18.004-17.999S42.005,14.076,42.005,24S33.929,42.001,24,42.001C14.072,42.001,5.995,33.924,5.995,24z">
                     </path>
+                    <title>WordPress</title>
                 </svg>
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
                     <path fill="#FDD835"
@@ -138,6 +142,7 @@
                     <path fill="#FFB74D"
                         d="M25.5 19c2.851 0 5.453 1.043 7.463 2.761C32.591 17.967 29.391 15 25.5 15s-7.091 2.967-7.463 6.761C20.047 20.043 22.649 19 25.5 19zM14.737 22.026C14.395 21.417 13.749 21 13 21c-1.104 0-2 .896-2 2 0 .465.165.888.432 1.228C12.049 22.987 13.282 22.123 14.737 22.026zM7.05 32c.251-2.734 2.482-4.895 5.259-4.99C11.537 26.388 10.568 26 9.5 26 7.015 26 5 28.015 5 30.5c0 .529.102 1.031.271 1.5H7.05z">
                     </path>
+                    <title>Cloudflare</title>
                 </svg>
             </div>
         </section>
@@ -174,7 +179,28 @@
 
     <!-- Rodapé -->
     <footer>
+        <div class="rodape-titulo">
+            <h2>Contatos</h2>
+            <div id="linha-azul"></div>
+        </div>
 
+        <div class="rodape-sessao">
+            <div class="rodape-container rodape-container-endereco">
+                <h4>Endereço</h4>
+                <ul>
+                    <li><img src="https://img.icons8.com/?size=100&id=uVHiOKL11CSm&format=png&color=000000" alt="Endereço" title="Endereço" width="24px"><a href="https://maps.app.goo.gl/ay4QYt7ASQVMo8YbA" target="_blank">Rua Carlos Vasconcelos | Fortaleza/CE</a> </li>
+                </ul>
+            </div>
+
+            <div class="rodape-container rodape-container-contato">
+                <h4>WhatsApp | E-mail | LinkedIn</h4>
+                <ul>
+                    <li><img src="https://img.icons8.com/?size=100&id=16713&format=png&color=000000" alt="WhatsApp" title="WhatsApp" width="24px"> <a href="#" target="_blank">(85) 9 9999-9999</a></li>
+                    <li><img src="https://img.icons8.com/?size=100&id=X0mEIh0RyDdL&format=png&color=000000" alt="Email" title="Email" width="24px"><a href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a></li>
+                    <li><img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000" alt="LinkedIn" title="LinkedIn" width="24px"><a href="https://www.linkedin.com/in/f%C3%A1bio-sousa-fscdev/" target="_blank">LinkedIn</a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
 
     <script src="js/script.js"></script>
