--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 </div>
 
                 <nav class="menu">
-                    <a href="#">Início</a>
+                    <a href="#inicio">Início</a>
                     <a href="#sobre">Sobre mim</a>
-                    <a href="#">Portfólio</a>
-                    <a href="#">Contato</a>
+                    <a href="#portfolio">Portfólio</a>
+                    <a href="#contato">Contato</a>
                     <a href="#" id="whatsapp-button"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                             fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
                             <path
@@ -88,7 +88,7 @@
 
     <!-- Conteúdo Principal -->
     <main>
-        <section class="banner">
+        <section class="banner" id="inicio">
             <h2>Bem-vindo</h2>
             <h1>Desenvolvimento de Sites</h1>
             <div class="icon-linguagens">
@@ -159,11 +159,55 @@
 
                     <p>Tenho mais de 3 anos de experiência no desenvolvimento e manutenção de sites utilizando WordPress
                         (com o construtor de páginas Elementor), HTML, CSS, JS, MySQL, além de integrações com
-                        ferramentas de automação como o Zapier.</p><br>
+                        ferramentas de automação como o Zapier entre outros.</p><br>
 
-                    <p>Também possuo conhecimento em configurar e implantar sites em diferentes plataformas de
-                        hospedagem, garantindo sua disponibilidade e desempenho otimizado, incluindo integração com o
-                        Cloudflare para melhorias de segurança e desempenho.</p>
+                    <h3>Por onde já trabalhei</h3><br>
+
+                    <div class="grid-experiencia">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Empresa</th>
+                                    <th>Ano</th>
+                                    <th>Cargo</th>
+                                    <th>Tecnologias Usadas</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Ângulo Digital</td>
+                                    <td>2021 - 2022</td>
+                                    <td>Estagiário</td>
+                                    <td>
+                                        <img src="https://img.icons8.com/?size=100&id=13664&format=png&color=000000"
+                                            alt="WordPress" title="WordPress" width="30px">
+                                        <img src="https://img.icons8.com/?size=100&id=20909&format=png&color=000000"
+                                            alt="HTML5" title="HTML5" width="30px">
+                                        <img src="https://img.icons8.com/?size=100&id=21278&format=png&color=000000"
+                                            alt="CSS" title="CSS" width="30px">
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td>Ângulo Digital</td>
+                                    <td>2022 ~ 2024</td>
+                                    <td>Desenvolvedor Full Stack</td>
+                                    <td>
+                                        <img src="https://img.icons8.com/?size=100&id=13664&format=png&color=000000"
+                                            alt="WordPress" title="WordPress" width="30px">
+                                        <img src="https://img.icons8.com/?size=100&id=20909&format=png&color=000000"
+                                            alt="HTML5" title="HTML5" width="30px">
+                                        <img src="https://img.icons8.com/?size=100&id=21278&format=png&color=000000"
+                                            alt="CSS" title="CSS" width="30px">
+                                        <img src="https://img.icons8.com/?size=100&id=108784&format=png&color=000000"
+                                            alt="JavaScript" title="JavaScript" width="30px">
+                                        <img src="https://img.icons8.com/?size=100&id=13682&format=png&color=000000"
+                                            alt="Cloudflare" title="Cloudflare" width="30px">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
 
                 <div class="container-sobre-descricao-direito">
@@ -179,7 +223,7 @@
 
     <!-- Rodapé -->
     <footer>
-        <div class="rodape-titulo">
+        <div class="rodape-titulo" id="contato">
             <h2>Contatos</h2>
             <div id="linha-azul"></div>
         </div>
@@ -188,16 +232,24 @@
             <div class="rodape-container rodape-container-endereco">
                 <h4>Endereço</h4>
                 <ul>
-                    <li><img src="https://img.icons8.com/?size=100&id=uVHiOKL11CSm&format=png&color=000000" alt="Endereço" title="Endereço" width="24px"><a href="https://maps.app.goo.gl/ay4QYt7ASQVMo8YbA" target="_blank">Rua Carlos Vasconcelos | Fortaleza/CE</a> </li>
+                    <li><img src="https://img.icons8.com/?size=100&id=uVHiOKL11CSm&format=png&color=000000"
+                            alt="Endereço" title="Endereço" width="24px"><a
+                            href="https://maps.app.goo.gl/ay4QYt7ASQVMo8YbA" target="_blank">Rua Carlos Vasconcelos |
+                            Fortaleza/CE</a> </li>
                 </ul>
             </div>
 
             <div class="rodape-container rodape-container-contato">
                 <h4>WhatsApp | E-mail | LinkedIn</h4>
                 <ul>
-                    <li><img src="https://img.icons8.com/?size=100&id=16713&format=png&color=000000" alt="WhatsApp" title="WhatsApp" width="24px"> <a href="#" target="_blank">(85) 9 9999-9999</a></li>
-                    <li><img src="https://img.icons8.com/?size=100&id=X0mEIh0RyDdL&format=png&color=000000" alt="Email" title="Email" width="24px"><a href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a></li>
-                    <li><img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000" alt="LinkedIn" title="LinkedIn" width="24px"><a href="https://www.linkedin.com/in/f%C3%A1bio-sousa-fscdev/" target="_blank">LinkedIn</a></li>
+                    <li><img src="https://img.icons8.com/?size=100&id=16713&format=png&color=000000" alt="WhatsApp"
+                            title="WhatsApp" width="24px"> <a href="#" target="_blank">(85) 9 9999-9999</a></li>
+                    <li><img src="https://img.icons8.com/?size=100&id=X0mEIh0RyDdL&format=png&color=000000" alt="Email"
+                            title="Email" width="24px"><a href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a>
+                    </li>
+                    <li><img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000" alt="LinkedIn"
+                            title="LinkedIn" width="24px"><a href="https://www.linkedin.com/in/f%C3%A1bio-sousa-fscdev/"
+                            target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
         </div>
