Adicionando a sessao portfolio

--- a/index.html
+++ b/index.html
@@ -223,6 +223,18 @@
                 </div>
             </div>
         </section>
+
+        <!-- PORTFÓLIO -->
+        <section class="portfolio-sessao" id="portfolio">
+            <div class="portfolio-titulo">
+                <h2>Portfólio</h2>
+                <div id="linha-azul"></div>
+            </div>
+
+            <div>
+                <h3>A desenvolver</h3><br>
+            </div>
+        </section>
     </main>
 
     <!-- Rodapé -->
