--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -250,8 +251,7 @@
                 <ul>
                     <li><img src="https://img.icons8.com/?size=100&id=uVHiOKL11CSm&format=png&color=000000"
                             alt="Endereço" title="Endereço" width="24px"><a
-                            href="https://maps.app.goo.gl/ay4QYt7ASQVMo8YbA" target="_blank">Rua Carlos Vasconcelos |
-                            Fortaleza/CE</a> </li>
+                            href="https://maps.app.goo.gl/oe8G7PjHbkQJ2Wpx5" target="_blank">Fortaleza/CE</a> </li>
                 </ul>
             </div>
 
