--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
         </section>
 
-        <section class="sobre-mim" id="sobre">
+        <section class="padrao-sessoes sobre-mim" id="sobre">
             <div class="sobre-mim-titulo">
                 <h2>Sobre mim</h2>
                 <div id="linha-azul"></div>
@@ -227,7 +227,7 @@
         </section>
 
         <!-- PORTFÓLIO -->
-        <section class="portfolio-sessao" id="portfolio">
+        <section class="padrao-sessoes portfolio-sessao" id="portfolio">
             <div class="portfolio-titulo">
                 <h2>Portfólio</h2>
                 <div id="linha-azul"></div>
@@ -240,7 +240,7 @@
     </main>
 
     <!-- Rodapé -->
-    <footer>
+    <footer class="padrao-sessoes rodape">
         <div class="rodape-titulo" id="contato">
             <h2>Contatos</h2>
             <div id="linha-azul"></div>
@@ -269,6 +269,10 @@
                             target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
+        </div>
+
+        <div class="copy">
+            <p>© Desenvolvido por Fábio Sousa</p>
         </div>
     </footer>
 
