--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
         <div class="sidebar-sessao">
             <aside class="sidebar-container">
-                <div class="nome-foto-fabio"> <img src="assets/Fábio Sousa.jpeg" alt="Fábio Sousa" title="Fábio Sousa">
+                <div class="nome-foto-fabio"> <img src="assets/Fábio Sousa web.webp" alt="Fábio Sousa" title="Fábio Sousa">
                     <p>Fábio Sousa</p>
                 </div>
 
