--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </path>
                     <title>WordPress</title>
                 </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 48 48">
                     <path fill="#FDD835"
                         d="M41.008 26.487L40.4 24.249 44.096 23.56 40.427 22.733 43.88 21.24 40.119 21.25 43.151 19.028 39.488 19.875 41.948 17.033 38.564 18.675 40.331 15.355 37.398 17.709 38.383 14.079 36.049 17.028 36.197 13.27 34.579 16.663 33.89 12.966 33.064 16.636 31.57 13.184 31.58 16.944 29.969 17.372 27.362 15.115 29.005 18.498 25.686 16.732 28.039 19.662 24.409 18.68 27.356 21.015 23.601 20.864 26.993 22.484 23.296 23.173 26.966 23.999 24.941 24.875 17.125 24.875 17.125 29.5 34.461 29.5 39 30 38.827 29.5 39 29.5 39 28.56 39.515 28.834 40.771 28.834 39.354 27.07 42.984 28.053z">
                     </path>
@@ -186,11 +186,11 @@
                                     <td>Estagiário</td>
                                     <td>
                                         <img src="https://img.icons8.com/?size=100&id=13664&format=png&color=000000"
-                                            alt="WordPress" title="WordPress" width="30px">
+                                            alt="WordPress" title="WordPress" width="30px" height="30px">
                                         <img src="https://img.icons8.com/?size=100&id=20909&format=png&color=000000"
-                                            alt="HTML5" title="HTML5" width="30px">
+                                            alt="HTML5" title="HTML5" width="30px" height="30px">
                                         <img src="https://img.icons8.com/?size=100&id=21278&format=png&color=000000"
-                                            alt="CSS" title="CSS" width="30px">
+                                            alt="CSS" title="CSS" width="30px" height="30px">
                                     </td>
                                 </tr>
 
@@ -200,15 +200,15 @@
                                     <td>Desenvolvedor Full Stack</td>
                                     <td>
                                         <img src="https://img.icons8.com/?size=100&id=13664&format=png&color=000000"
-                                            alt="WordPress" title="WordPress" width="30px">
+                                            alt="WordPress" title="WordPress" width="30px" height="30px">
                                         <img src="https://img.icons8.com/?size=100&id=20909&format=png&color=000000"
-                                            alt="HTML5" title="HTML5" width="30px">
+                                            alt="HTML5" title="HTML5" width="30px" height="30px">
                                         <img src="https://img.icons8.com/?size=100&id=21278&format=png&color=000000"
-                                            alt="CSS" title="CSS" width="30px">
+                                            alt="CSS" title="CSS" width="30px" height="30px">
                                         <img src="https://img.icons8.com/?size=100&id=108784&format=png&color=000000"
-                                            alt="JavaScript" title="JavaScript" width="30px">
+                                            alt="JavaScript" title="JavaScript" width="30px" height="30px">
                                         <img src="https://img.icons8.com/?size=100&id=13682&format=png&color=000000"
-                                            alt="Cloudflare" title="Cloudflare" width="30px">
+                                            alt="Cloudflare" title="Cloudflare" width="30px" height="30px">
                                     </td>
                                 </tr>
                             </tbody>
