Imagem fabio ajustada

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <main>
         <section class="banner" id="inicio">
             <!-- APARECE NO MOBILE -->
-            <div class="nome-foto-fabio-mobile"> <img src="assets/Fábio Sousa.jpeg" alt="Fábio Sousa" title="Fábio Sousa">
+            <div class="nome-foto-fabio-mobile"> <img src="assets/Fábio Sousa web.webp" alt="Fábio Sousa" title="Fábio Sousa">
                 <p>Fábio Sousa</p>
             </div>
             <h2>Bem-vindo</h2>
