--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="pt-br">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-TJWQLZ96');</script>
+    <!-- End Google Tag Manager -->
+     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index">
@@ -14,24 +25,20 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <title>Portfólio Fábio Sousa</title>
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6FB26SDXHL"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-6FB26SDXHL');
-    </script>
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TJWQLZ96" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <!-- Cabeçalho -->
     <header>
         <div class="sidebar-sessao">
             <aside class="sidebar-container">
-                <div class="nome-foto-fabio"> <img src="assets/Fábio Sousa web.webp" alt="Fábio Sousa" title="Fábio Sousa">
+                <div class="nome-foto-fabio"> <img src="assets/Fábio Sousa web.webp" alt="Fábio Sousa"
+                        title="Fábio Sousa">
                     <p>Fábio Sousa</p>
                 </div>
 
@@ -92,7 +99,8 @@
     <main>
         <section class="banner" id="inicio">
             <!-- APARECE NO MOBILE -->
-            <div class="nome-foto-fabio-mobile"> <img src="assets/Fábio Sousa web.webp" alt="Fábio Sousa" title="Fábio Sousa">
+            <div class="nome-foto-fabio-mobile"> <img src="assets/Fábio Sousa web.webp" alt="Fábio Sousa"
+                    title="Fábio Sousa">
                 <p>Fábio Sousa</p>
             </div>
             <h2>Bem-vindo</h2>
