--- a/index.html
+++ b/index.html
@@ -262,12 +262,12 @@
                 <h4>WhatsApp | E-mail | LinkedIn</h4>
                 <ul>
                     <li><img src="https://img.icons8.com/?size=100&id=16713&format=png&color=000000" alt="WhatsApp"
-                            title="WhatsApp" width="24px"> <a href="#" target="_blank">(85) 9 9999-9999</a></li>
+                            title="WhatsApp" width="24px" height="24px"> <a href="#" target="_blank">(85) 9 9999-9999</a></li>
                     <li><img src="https://img.icons8.com/?size=100&id=X0mEIh0RyDdL&format=png&color=000000" alt="Email"
-                            title="Email" width="24px"><a href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a>
+                            title="Email" width="24px" height="24px"><a href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a>
                     </li>
                     <li><img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000" alt="LinkedIn"
-                            title="LinkedIn" width="24px"><a href="https://www.linkedin.com/in/f%C3%A1bio-sousa-fscdev/"
+                            title="LinkedIn" width="24px" height="24px"><a href="https://www.linkedin.com/in/f%C3%A1bio-sousa-fscdev/"
                             target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
