--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 <h4>Endereço</h4>
                 <ul>
                     <li><img src="https://img.icons8.com/?size=100&id=uVHiOKL11CSm&format=png&color=000000"
-                            alt="Endereço" title="Endereço" width="24px"><a
+                            alt="Endereço" title="Endereço" width="24px" height="24px"><a
                             href="https://maps.app.goo.gl/oe8G7PjHbkQJ2Wpx5" target="_blank">Fortaleza/CE</a> </li>
                 </ul>
             </div>
