--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <li><img src="https://img.icons8.com/?size=100&id=X0mEIh0RyDdL&format=png&color=000000" alt="Email"
                             title="Email" width="24px" height="24px"><a href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a>
                     </li>
-                    <li><img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000" alt="LinkedIn"
+                    <li><img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000" alt="Linkedin"
                             title="LinkedIn" width="24px" height="24px"><a href="https://www.linkedin.com/in/f%C3%A1bio-sousa-fscdev/"
                             target="_blank">LinkedIn</a></li>
                 </ul>
