--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="sidebar-sessao">
             <aside class="sidebar-container">
                 <div class="nome-foto-fabio"> <img src="assets/Fábio Sousa web.webp" alt="Fábio Sousa"
-                        title="Fábio Sousa">
+                        title="Fábio Sousa" width="140px" height="auto">
                     <p>Fábio Sousa</p>
                 </div>
 
@@ -94,7 +94,7 @@
         <section class="banner" id="inicio">
             <!-- APARECE NO MOBILE -->
             <div class="nome-foto-fabio-mobile"> <img src="assets/Fábio Sousa web.webp" alt="Fábio Sousa"
-                    title="Fábio Sousa">
+                    title="Fábio Sousa" width="140px" height="auto">
                 <p>Fábio Sousa</p>
             </div>
             <h2>Bem-vindo</h2>
