--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index">
+    <meta name="description" content="Portfólio do Desenvolvedor Front-End: Fábio Sousa">
     <link rel="icon" href="https://img.icons8.com/?size=100&id=vIUQ63hvBJFD&format=png&color=000000" type="image/png">
     <link rel="stylesheet" href="css/index.css">
     <title>Portfólio Fábio Sousa</title>
@@ -32,7 +33,7 @@
         <div class="sidebar-sessao">
             <aside class="sidebar-container">
                 <div class="nome-foto-fabio"> <img src="assets/Fábio Sousa web.webp" alt="Fábio Sousa"
-                        title="Fábio Sousa" width="140px" height="auto">
+                        title="Fábio Sousa" width="140px" height="140px">
                     <p>Fábio Sousa</p>
                 </div>
 
@@ -49,7 +50,7 @@
                 </nav>
 
                 <div class="redes-sociais">
-                    <a href="https://www.linkedin.com/in/f%C3%A1bio-sousa-fscdev/" target="_blank"><svg
+                    <a href="https://www.linkedin.com/in/fabio-sousa-fscdev/" target="_blank" aria-label="Linedin Profile"><svg
                             xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="32" height="32"
                             viewBox="0 0 48 48">
                             <path fill="#0288D1"
@@ -59,7 +60,7 @@
                                 d="M12 19H17V36H12zM14.485 17h-.028C12.965 17 12 15.888 12 14.499 12 13.08 12.995 12 14.514 12c1.521 0 2.458 1.08 2.486 2.499C17 15.887 16.035 17 14.485 17zM36 36h-5v-9.099c0-2.198-1.225-3.698-3.192-3.698-1.501 0-2.313 1.012-2.707 1.99C24.957 25.543 25 26.511 25 27v9h-5V19h5v2.616C25.721 20.5 26.85 19 29.738 19c3.578 0 6.261 2.25 6.261 7.274L36 36 36 36z">
                             </path>
                         </svg></i></a>
-                    <a href="https://github.com/fabiosousasi" target="_blank"><svg xmlns="http://www.w3.org/2000/svg"
+                    <a href="https://wa.me/5585996173084" target="_blank" aria-label="Número do WhatsApp"><svg xmlns="http://www.w3.org/2000/svg"
                             x="0px" y="0px" width="32" height="32" viewBox="0 0 48 48">
                             <path fill="#fff"
                                 d="M4.868,43.303l2.694-9.835C5.9,30.59,5.026,27.324,5.027,23.979C5.032,13.514,13.548,5,24.014,5c5.079,0.002,9.845,1.979,13.43,5.566c3.584,3.588,5.558,8.356,5.556,13.428c-0.004,10.465-8.522,18.98-18.986,18.98c-0.001,0,0,0,0,0h-0.008c-3.177-0.001-6.3-0.798-9.073-2.311L4.868,43.303z">
@@ -77,7 +78,7 @@
                                 d="M19.268,16.045c-0.355-0.79-0.729-0.806-1.068-0.82c-0.277-0.012-0.593-0.011-0.909-0.011c-0.316,0-0.83,0.119-1.265,0.594c-0.435,0.475-1.661,1.622-1.661,3.956c0,2.334,1.7,4.59,1.937,4.906c0.237,0.316,3.282,5.259,8.104,7.161c4.007,1.58,4.823,1.266,5.693,1.187c0.87-0.079,2.807-1.147,3.202-2.255c0.395-1.108,0.395-2.057,0.277-2.255c-0.119-0.198-0.435-0.316-0.909-0.554s-2.807-1.385-3.242-1.543c-0.435-0.158-0.751-0.237-1.068,0.238c-0.316,0.474-1.225,1.543-1.502,1.859c-0.277,0.317-0.554,0.357-1.028,0.119c-0.474-0.238-2.002-0.738-3.815-2.354c-1.41-1.257-2.362-2.81-2.639-3.285c-0.277-0.474-0.03-0.731,0.208-0.968c0.213-0.213,0.474-0.554,0.712-0.831c0.237-0.277,0.316-0.475,0.474-0.791c0.158-0.317,0.079-0.594-0.04-0.831C20.612,19.329,19.69,16.983,19.268,16.045z"
                                 clip-rule="evenodd"></path>
                         </svg></a>
-                    <a href="https://github.com/fabiosousasi" target="_blank" id="github"><svg
+                    <a href="https://github.com/fabiosousasi" target="_blank" id="github" aria-label="Github Profile"><svg
                             xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="32" height="32"
                             viewBox="0 0 64 64">
                             <path
@@ -94,7 +95,7 @@
         <section class="banner" id="inicio">
             <!-- APARECE NO MOBILE -->
             <div class="nome-foto-fabio-mobile"> <img src="assets/Fábio Sousa web.webp" alt="Fábio Sousa"
-                    title="Fábio Sousa" width="140px" height="auto">
+                    title="Fábio Sousa" width="140px" height="140px">
                 <p>Fábio Sousa</p>
             </div>
             <h2>Bem-vindo</h2>
@@ -267,7 +268,7 @@
                             title="Email" width="24px" height="24px"><a href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a>
                     </li>
                     <li><img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000" alt="Icone Linkedin"
-                            title="LinkedIn" width="24px" height="24px"><a href="https://www.linkedin.com/in/f%C3%A1bio-sousa-fscdev/"
+                            title="LinkedIn" width="24px" height="24px"><a href="https://www.linkedin.com/in/fabio-sousa-fscdev/"
                             target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
