--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <ul>
                         <li><span>Nome:</span> Fábio Sousa</li>
                         <li><span>Email:</span> <a href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a> </li>
-                        <li><span>WhatsApp:</span> <a href="#">(85) 9 9999-9999</a></li>
+                        <li><span>WhatsApp:</span> <a href="https://wa.me/5585996173084">(85) 9 9617-3084</a></li>
                     </ul>
                 </div>
             </div>
@@ -263,7 +263,7 @@
                 <h4>WhatsApp | E-mail | LinkedIn</h4>
                 <ul>
                     <li><img src="https://img.icons8.com/?size=100&id=16713&format=png&color=000000" alt="WhatsApp"
-                            title="WhatsApp" width="24px" height="24px"> <a href="#" target="_blank">(85) 9 9999-9999</a></li>
+                            title="WhatsApp" width="24px" height="24px"> <a href="https://wa.me/5585996173084" target="_blank">(85) 9 9617-3084</a></li>
                     <li><img src="https://img.icons8.com/?size=100&id=X0mEIh0RyDdL&format=png&color=000000" alt="Email"
                             title="Email" width="24px" height="24px"><a href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a>
                     </li>
