imagem fabio redimensionado

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header>
         <div class="sidebar-sessao">
             <aside class="sidebar-container">
-                <div class="nome-foto-fabio"> <img src="assets/Fábio Sousa web.webp" alt="Fábio Sousa"
+                <div class="nome-foto-fabio"> <img src="assets/Fábio Sousa web 200.webp" alt="Fábio Sousa"
                         title="Fábio Sousa" width="140px" height="140px">
                     <p>Fábio Sousa</p>
                 </div>
@@ -94,7 +94,7 @@
     <main>
         <section class="banner" id="inicio">
             <!-- APARECE NO MOBILE -->
-            <div class="nome-foto-fabio-mobile"> <img src="assets/Fábio Sousa web.webp" alt="Fábio Sousa"
+            <div class="nome-foto-fabio-mobile"> <img src="assets/Fábio Sousa web 200.webp" alt="Fábio Sousa"
                     title="Fábio Sousa" width="140px" height="140px">
                 <p>Fábio Sousa</p>
             </div>
