--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index">
     <meta name="description" content="Portfólio do Desenvolvedor Front-End: Fábio Sousa">
+    <link rel="preload" href="assets/web developer working 950.webp" as="image">
     <link rel="icon" href="https://img.icons8.com/?size=100&id=vIUQ63hvBJFD&format=png&color=000000" type="image/png">
     <link rel="stylesheet" href="css/index.css">
     <link rel="preload"
