colocando target blank

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <ul>
                         <li><span>Nome:</span> Fábio Sousa</li>
                         <li><span>Email:</span> <a href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a> </li>
-                        <li><span>WhatsApp:</span> <a href="https://wa.me/5585996173084">(85) 9 9617-3084</a></li>
+                        <li><span>WhatsApp:</span> <a href="https://wa.me/5585996173084" target="_blank">(85) 9 9617-3084</a></li>
                     </ul>
                 </div>
             </div>
