colocando menu hamburguer

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             <!-- Menu Hamburguer -->
             <div class="menu-hamburguer-desk-inativo botao-menu-hamburguer">
                 <img class="abrir-menu-icon" src="assets/icons8-menu-do-xbox-48.png" alt="Botão Menu Mobile"
-                    title="Botão Menu Mobile">
+                    title="Botão Menu Mobile" width="48px" height="48px">
                 <img class="fechar-menu-icon" src="assets/icons8-macos-close-48.png" alt="Botão Fechar Menu Mobile"
-                    title="Botão Fechar Menu Mobile">
+                    title="Botão Fechar Menu Mobile" width="48px" height="48px">
             </div>
             <div class="menu-hamburguer-desk-inativo menu-hamburger">
                 <a href="#inicio">Início</a>
