--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
         <section class="banner" id="inicio">
             <!-- Menu Hamburguer -->
             <div class="menu-hamburguer-desk-inativo botao-menu-hamburguer">
-                <img class="abrir-menu-icon" src="assets/icons8-menu-do-xbox-48.png" alt="Botão Menu Mobile"
-                    title="Botão Menu Mobile" width="48px" height="48px">
-                <img class="fechar-menu-icon" src="assets/icons8-macos-close-48.png" alt="Botão Fechar Menu Mobile"
-                    title="Botão Fechar Menu Mobile" width="48px" height="48px">
+                <img class="abrir-menu-icon" src="assets/menu mobile.png" alt="Botão Menu Mobile"
+                    title="Botão Menu Mobile" width="64px" height="64px">
+                <img class="fechar-menu-icon" src="assets/menu fechar.png" alt="Botão Fechar Menu Mobile"
+                    title="Botão Fechar Menu Mobile" width="64px" height="64px">
             </div>
             <div class="menu-hamburguer-desk-inativo menu-hamburger">
                 <a href="#inicio">Início</a>
