Sessao Projetos concluida

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <div class="grid-portfolio">
                     <div class="grid-portfolio-titulo"><label>Projeto Cafeteria Manhattan</label></div>
 
-                    <img class="grid-portfolio-thumb" src="https://thumbsnap.com/f/YwARPTWi"
+                    <img class="grid-portfolio-thumb" src="assets/cafeteria manhattan.jpeg"
                         alt="Imagem Projeto Cafeteria Manhatatan" title="Imagem Projeto Cafeteria Manhatatan">
 
                     <div class="grid-portfolio-links-projetos">
