--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
                 <div class="grid-portfolio">
                     <div class="grid-portfolio-titulo"><label>Projeto provedor de hospedagem</label></div>
 
-                    <img class="grid-portfolio-thumb" src="https://thumbsnap.com/i/fMCNqMUa.jpg"
-                        alt="Imagem Projeto Hospedagem" title="Imagem Projeto Hospedagem">
+                    <img class="grid-portfolio-thumb" src="assets/projeto hospedagem web.webp"
+                        alt="Imagem Projeto Hospedagem" title="Imagem Projeto Hospedagem" min-width="260px" height="350px">
 
                     <div class="grid-portfolio-links-projetos">
                         <a class="link-projeto" href="https://fabiosousasi.github.io/site-provedor-hospedagem/" target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto" title="Link Projeto" width="32px" height="32px"></a>
@@ -278,8 +278,8 @@
                 <div class="grid-portfolio">
                     <div class="grid-portfolio-titulo"><label>Projeto Cafeteria Manhattan</label></div>
 
-                    <img class="grid-portfolio-thumb" src="assets/cafeteria manhattan.jpeg"
-                        alt="Imagem Projeto Cafeteria Manhatatan" title="Imagem Projeto Cafeteria Manhatatan">
+                    <img class="grid-portfolio-thumb" src="assets/cafeteria manhattan web.webp"
+                        alt="Imagem Projeto Cafeteria Manhatatan" title="Imagem Projeto Cafeteria Manhatatan" min-width="260px" height="350px">
 
                     <div class="grid-portfolio-links-projetos">
                         <a class="link-projeto" href="https://fabiosousasi.github.io/site-cafeteria/" target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto" title="Link Projeto" width="32px" height="32px"></a>
@@ -291,8 +291,8 @@
                 <div class="grid-portfolio">
                     <div class="grid-portfolio-titulo"><label>Projeto Clínica</label></div>
 
-                    <img class="grid-portfolio-thumb" src="https://thumbsnap.com/i/D2yEv12L.jpg"
-                        alt="Imagem Projeto Clínica" title="Imagem Projeto Clínica">
+                    <img class="grid-portfolio-thumb" src="assets/projeto clinica web.webp"
+                        alt="Imagem Projeto Clínica" title="Imagem Projeto Clínica" min-width="260px" height="350px">
 
                     <div class="grid-portfolio-links-projetos">
                         <a class="link-projeto" href="https://fabiosousasi.github.io/projeto-clinica/" target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto" title="Link Projeto" width="32px" height="32px"></a>
@@ -316,7 +316,7 @@
                 <h3>Endereço</h3>
                 <ul>
                     <li><img src="https://img.icons8.com/?size=100&id=uVHiOKL11CSm&format=png&color=000000"
-                            alt="Endereço" title="Endereço" width="24px" height="24px"><a
+                            alt="Endereço" title="Endereço" width="32px" height="32px"><a
                             href="https://maps.app.goo.gl/oe8G7PjHbkQJ2Wpx5" target="_blank">Fortaleza/CE</a> </li>
                 </ul>
             </div>
@@ -325,14 +325,14 @@
                 <h3>WhatsApp | E-mail | LinkedIn</h3>
                 <ul>
                     <li><img src="https://img.icons8.com/?size=100&id=16713&format=png&color=000000" alt="WhatsApp"
-                            title="WhatsApp" width="24px" height="24px"> <a href="https://wa.me/5585996173084"
+                            title="WhatsApp" width="32px" height="32px"> <a href="https://wa.me/5585996173084"
                             target="_blank">(85) 9 9617-3084</a></li>
                     <li><img src="https://img.icons8.com/?size=100&id=X0mEIh0RyDdL&format=png&color=000000" alt="Email"
-                            title="Email" width="24px" height="24px"><a
+                            title="Email" width="32px" height="32px"><a
                             href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a>
                     </li>
                     <li><img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000"
-                            alt="Icone Linkedin" title="LinkedIn" width="24px" height="24px"><a
+                            alt="Icone Linkedin" title="LinkedIn" width="32px" height="32px"><a
                             href="https://www.linkedin.com/in/fabio-sousa-fscdev/" target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
