--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="sidebar-sessao">
             <aside class="sidebar-container">
                 <div class="nome-foto-fabio"> <img src="assets/Fábio Sousa web 200.webp" alt="Fábio Sousa"
-                        title="Fábio Sousa" width="140px" height="140px">
+                        title="Fábio Sousa" width="140px" height="140px" loading="lazy">
                     <p>Fábio Sousa</p>
                 </div>
 
@@ -100,9 +100,9 @@
             <!-- Menu Hamburguer -->
             <div class="menu-hamburguer-desk-inativo botao-menu-hamburguer">
                 <img class="abrir-menu-icon" src="assets/menu mobile.png" alt="Botão Menu Mobile"
-                    title="Botão Menu Mobile" width="64px" height="64px">
+                    title="Botão Menu Mobile" width="64px" height="64px" loading="lazy">
                 <img class="fechar-menu-icon" src="assets/menu fechar.png" alt="Botão Fechar Menu Mobile"
-                    title="Botão Fechar Menu Mobile" width="64px" height="64px">
+                    title="Botão Fechar Menu Mobile" width="64px" height="64px" loading="lazy">
             </div>
             <div class="menu-hamburguer-desk-inativo menu-hamburger">
                 <a href="#inicio">Início</a>
@@ -119,7 +119,7 @@
 
             <!-- Imagem e nome que só aparece no mobile -->
             <div class="nome-foto-fabio-mobile"> <img src="assets/Fábio Sousa web 200.webp" alt="Fábio Sousa"
-                    title="Fábio Sousa" width="140px" height="140px">
+                    title="Fábio Sousa" width="140px" height="140px" loading="lazy">
                 <p>Fábio Sousa</p>
             </div>
             <h2>Bem-vindo</h2>
@@ -213,11 +213,11 @@
                                     <td>Estagiário</td>
                                     <td>
                                         <img src="https://img.icons8.com/?size=100&id=13664&format=png&color=000000"
-                                            alt="WordPress" title="WordPress" width="30px" height="30px">
+                                            alt="WordPress" title="WordPress" width="30px" height="30px" loading="lazy">
                                         <img src="https://img.icons8.com/?size=100&id=20909&format=png&color=000000"
-                                            alt="HTML5" title="HTML5" width="30px" height="30px">
+                                            alt="HTML5" title="HTML5" width="30px" height="30px" loading="lazy">
                                         <img src="https://img.icons8.com/?size=100&id=21278&format=png&color=000000"
-                                            alt="CSS" title="CSS" width="30px" height="30px">
+                                            alt="CSS" title="CSS" width="30px" height="30px" loading="lazy">
                                     </td>
                                 </tr>
 
@@ -227,15 +227,15 @@
                                     <td>Desenvolvedor Full Stack</td>
                                     <td>
                                         <img src="https://img.icons8.com/?size=100&id=13664&format=png&color=000000"
-                                            alt="WordPress" title="WordPress" width="30px" height="30px">
+                                            alt="WordPress" title="WordPress" width="30px" height="30px" loading="lazy">
                                         <img src="https://img.icons8.com/?size=100&id=20909&format=png&color=000000"
-                                            alt="HTML5" title="HTML5" width="30px" height="30px">
+                                            alt="HTML5" title="HTML5" width="30px" height="30px" loading="lazy">
                                         <img src="https://img.icons8.com/?size=100&id=21278&format=png&color=000000"
-                                            alt="CSS" title="CSS" width="30px" height="30px">
+                                            alt="CSS" title="CSS" width="30px" height="30px" loading="lazy">
                                         <img src="https://img.icons8.com/?size=100&id=108784&format=png&color=000000"
-                                            alt="JavaScript" title="JavaScript" width="30px" height="30px">
+                                            alt="JavaScript" title="JavaScript" width="30px" height="30px" loading="lazy">
                                         <img src="https://img.icons8.com/?size=100&id=13682&format=png&color=000000"
-                                            alt="Cloudflare" title="Cloudflare" width="30px" height="30px">
+                                            alt="Cloudflare" title="Cloudflare" width="30px" height="30px" loading="lazy">
                                     </td>
                                 </tr>
                             </tbody>
@@ -266,12 +266,12 @@
                     <div class="grid-portfolio-titulo"><label>Projeto provedor de hospedagem</label></div>
 
                     <img class="grid-portfolio-thumb" src="assets/projeto hospedagem web.webp"
-                        alt="Imagem Projeto Hospedagem" title="Imagem Projeto Hospedagem" min-width="260px" height="350px">
+                        alt="Imagem Projeto Hospedagem" title="Imagem Projeto Hospedagem" min-width="260px" height="350px" loading="lazy">
 
                     <div class="grid-portfolio-links-projetos">
-                        <a class="link-projeto" href="https://fabiosousasi.github.io/site-provedor-hospedagem/" target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto" title="Link Projeto" width="32px" height="32px"></a>
+                        <a class="link-projeto" href="https://fabiosousasi.github.io/site-provedor-hospedagem/" target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto" title="Link Projeto" width="32px" height="32px" loading="lazy"></a>
 
-                        <a class="link-projeto" href="https://github.com/fabiosousasi/site-provedor-hospedagem" target="_blank"><img src="assets/icons8-github-60.png" alt="Link Projeto" title="Link Projeto" width="35px" height="35px"></a>
+                        <a class="link-projeto" href="https://github.com/fabiosousasi/site-provedor-hospedagem" target="_blank"><img src="assets/icons8-github-60.png" alt="Link Projeto" title="Link Projeto" width="35px" height="35px" loading="lazy"></a>
                     </div>
                 </div>
 
@@ -279,12 +279,12 @@
                     <div class="grid-portfolio-titulo"><label>Projeto Cafeteria Manhattan</label></div>
 
                     <img class="grid-portfolio-thumb" src="assets/cafeteria manhattan web.webp"
-                        alt="Imagem Projeto Cafeteria Manhatatan" title="Imagem Projeto Cafeteria Manhatatan" min-width="260px" height="350px">
+                        alt="Imagem Projeto Cafeteria Manhatatan" title="Imagem Projeto Cafeteria Manhatatan" min-width="260px" height="350px" loading="lazy">
 
                     <div class="grid-portfolio-links-projetos">
-                        <a class="link-projeto" href="https://fabiosousasi.github.io/site-cafeteria/" target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto" title="Link Projeto" width="32px" height="32px"></a>
+                        <a class="link-projeto" href="https://fabiosousasi.github.io/site-cafeteria/" target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto" title="Link Projeto" width="32px" height="32px" loading="lazy"></a>
 
-                        <a class="link-projeto" href="https://github.com/fabiosousasi/site-cafeteria" target="_blank"><img src="assets/icons8-github-60.png" alt="Link Projeto" title="Link Projeto" width="35px" height="35px"></a>
+                        <a class="link-projeto" href="https://github.com/fabiosousasi/site-cafeteria" target="_blank"><img src="assets/icons8-github-60.png" alt="Link Projeto" title="Link Projeto" width="35px" height="35px" loading="lazy"></a>
                     </div>
                 </div>
 
@@ -292,12 +292,12 @@
                     <div class="grid-portfolio-titulo"><label>Projeto Clínica</label></div>
 
                     <img class="grid-portfolio-thumb" src="assets/projeto clinica web.webp"
-                        alt="Imagem Projeto Clínica" title="Imagem Projeto Clínica" min-width="260px" height="350px">
+                        alt="Imagem Projeto Clínica" title="Imagem Projeto Clínica" min-width="260px" height="350px" loading="lazy">
 
                     <div class="grid-portfolio-links-projetos">
-                        <a class="link-projeto" href="https://fabiosousasi.github.io/projeto-clinica/" target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto" title="Link Projeto" width="32px" height="32px"></a>
+                        <a class="link-projeto" href="https://fabiosousasi.github.io/projeto-clinica/" target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto" title="Link Projeto" width="32px" height="32px" loading="lazy"></a>
 
-                        <a class="link-projeto" href="https://github.com/fabiosousasi/projeto-clinica" target="_blank"><img src="assets/icons8-github-60.png" alt="Link Projeto" title="Link Projeto" width="35px" height="35px"></a>
+                        <a class="link-projeto" href="https://github.com/fabiosousasi/projeto-clinica" target="_blank"><img src="assets/icons8-github-60.png" alt="Link Projeto" title="Link Projeto" width="35px" height="35px" loading="lazy"></a>
                     </div>
                 </div>
             </div>
@@ -316,7 +316,7 @@
                 <h3>Endereço</h3>
                 <ul>
                     <li><img src="https://img.icons8.com/?size=100&id=uVHiOKL11CSm&format=png&color=000000"
-                            alt="Endereço" title="Endereço" width="32px" height="32px"><a
+                            alt="Endereço" title="Endereço" width="32px" height="32px" loading="lazy"><a
                             href="https://maps.app.goo.gl/oe8G7PjHbkQJ2Wpx5" target="_blank">Fortaleza/CE</a> </li>
                 </ul>
             </div>
@@ -325,14 +325,14 @@
                 <h3>WhatsApp | E-mail | LinkedIn</h3>
                 <ul>
                     <li><img src="https://img.icons8.com/?size=100&id=16713&format=png&color=000000" alt="WhatsApp"
-                            title="WhatsApp" width="32px" height="32px"> <a href="https://wa.me/5585996173084"
+                            title="WhatsApp" width="32px" height="32px" loading="lazy"> <a href="https://wa.me/5585996173084"
                             target="_blank">(85) 9 9617-3084</a></li>
                     <li><img src="https://img.icons8.com/?size=100&id=X0mEIh0RyDdL&format=png&color=000000" alt="Email"
-                            title="Email" width="32px" height="32px"><a
+                            title="Email" width="32px" height="32px" loading="lazy"><a
                             href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a>
                     </li>
                     <li><img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000"
-                            alt="Icone Linkedin" title="LinkedIn" width="32px" height="32px"><a
+                            alt="Icone Linkedin" title="LinkedIn" width="32px" height="32px" loading="lazy"><a
                             href="https://www.linkedin.com/in/fabio-sousa-fscdev/" target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
