--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <div class="grid-portfolio-titulo"><label>Projeto provedor de hospedagem</label></div>
 
                     <img class="grid-portfolio-thumb" src="assets/projeto hospedagem web.webp"
-                        alt="Imagem Projeto Hospedagem" title="Imagem Projeto Hospedagem" min-width="260px" height="350px" loading="lazy">
+                        alt="Imagem Projeto Hospedagem" title="Imagem Projeto Hospedagem" width="260px" height="350px" loading="lazy">
 
                     <div class="grid-portfolio-links-projetos">
                         <a class="link-projeto" href="https://fabiosousasi.github.io/site-provedor-hospedagem/" target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto" title="Link Projeto" width="32px" height="32px" loading="lazy"></a>
@@ -279,7 +279,7 @@
                     <div class="grid-portfolio-titulo"><label>Projeto Cafeteria Manhattan</label></div>
 
                     <img class="grid-portfolio-thumb" src="assets/cafeteria manhattan web.webp"
-                        alt="Imagem Projeto Cafeteria Manhatatan" title="Imagem Projeto Cafeteria Manhatatan" min-width="260px" height="350px" loading="lazy">
+                        alt="Imagem Projeto Cafeteria Manhatatan" title="Imagem Projeto Cafeteria Manhatatan" width="260px" height="350px" loading="lazy">
 
                     <div class="grid-portfolio-links-projetos">
                         <a class="link-projeto" href="https://fabiosousasi.github.io/site-cafeteria/" target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto" title="Link Projeto" width="32px" height="32px" loading="lazy"></a>
@@ -292,7 +292,7 @@
                     <div class="grid-portfolio-titulo"><label>Projeto Clínica</label></div>
 
                     <img class="grid-portfolio-thumb" src="assets/projeto clinica web.webp"
-                        alt="Imagem Projeto Clínica" title="Imagem Projeto Clínica" min-width="260px" height="350px" loading="lazy">
+                        alt="Imagem Projeto Clínica" title="Imagem Projeto Clínica" width="260px" height="350px" loading="lazy">
 
                     <div class="grid-portfolio-links-projetos">
                         <a class="link-projeto" href="https://fabiosousasi.github.io/projeto-clinica/" target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto" title="Link Projeto" width="32px" height="32px" loading="lazy"></a>
