--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index">
     <meta name="description" content="Portfólio do Desenvolvedor Front-End: Fábio Sousa">
+    <meta property="og:title" content="Portfólio - Fábio Sousa">
+    <meta property="og:description" content="Portfólio do Desenvolvedor Front-End: Fábio Sousa">
+    <meta property="og:image" content="https://img.icons8.com/?size=100&id=vIUQ63hvBJFD&format=png&color=000000">
+    <meta property="og:url" content="https://fabiosousasi.github.io/portfolio-fabio-sousa/">
+    <meta property="og:type" content="website">
+
     <link rel="preload" href="assets/web developer working 950.webp" as="image">
     <link rel="icon" href="https://img.icons8.com/?size=100&id=vIUQ63hvBJFD&format=png&color=000000" type="image/png">
     <link rel="stylesheet" href="css/index.css">
@@ -26,7 +32,7 @@
             href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,100..1000;1,100..1000&display=swap">
     </noscript>
 
-    <title>Portfólio Fábio Sousa</title>
+    <title>Portfólio - Fábio Sousa</title>
 </head>
 
 <body>
