Colocando efeito ao ativar o scroll

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
 
             <div class="container-sobre-descricao">
-                <div class="container-sobre-descricao-esquerdo">
+                <div class="container-sobre-descricao-esquerdo js-scroll js-scroll-esquerda">
                     <h3>Olá, me chamo <span id="nome-azul">Fábio Sousa</span> sou desenvolvedor de sites.</h3><br>
 
                     <p>Tenho mais de 3 anos de experiência no desenvolvimento e manutenção de sites utilizando WordPress
@@ -251,7 +251,7 @@
                     </div>
                 </div>
 
-                <div class="container-sobre-descricao-direito">
+                <div class="container-sobre-descricao-direito js-scroll js-scroll-direita">
                     <ul>
                         <li><span>Nome:</span> Fábio Sousa</li>
                         <li><span>Email:</span> <a href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a> </li>
@@ -270,7 +270,7 @@
             </div>
 
             <div class="container-grid-portfolio">
-                <div class="grid-portfolio">
+                <div class="grid-portfolio js-scroll js-scroll-esquerda">
                     <div class="grid-portfolio-titulo"><label>Projeto provedor de hospedagem</label></div>
 
                     <img class="grid-portfolio-thumb" src="assets/projeto hospedagem web.webp"
@@ -306,7 +306,7 @@
                     </div>
                 </div>
 
-                <div class="grid-portfolio">
+                <div class="grid-portfolio js-scroll js-scroll-direita">
                     <div class="grid-portfolio-titulo"><label>Projeto Clínica</label></div>
 
                     <img class="grid-portfolio-thumb" src="assets/projeto clinica web.webp" alt="Imagem Projeto Clínica"
