--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 <div class="container-sobre-descricao-direito js-scroll js-scroll-direita">
                     <ul>
                         <li><span>Nome:</span> Fábio Sousa</li>
-                        <li><span>Email:</span> <a href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a> </li>
+                        <li><span>Email:</span> <a href="mailto:fabiosousawordpress@gmail.com">fabiosousawordpress@gmail.com</a> </li>
                         <li><span>WhatsApp:</span> <a href="https://wa.me/5585996173084" target="_blank">(85) 9
                                 9617-3084</a></li>
                     </ul>
@@ -351,7 +351,7 @@
                             href="https://wa.me/5585996173084" target="_blank">(85) 9 9617-3084</a></li>
                     <li><img src="https://img.icons8.com/?size=100&id=X0mEIh0RyDdL&format=png&color=000000" alt="Email"
                             title="Email" width="32px" height="32px" loading="lazy"><a
-                            href="mailto:fabiofscdev@gmail.com">fabiofscdev@gmail.com</a>
+                            href="mailto:fabiosousawordpress@gmail.com">fabiosousawordpress@gmail.com</a>
                     </li>
                     <li><img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000"
                             alt="Icone Linkedin" title="LinkedIn" width="32px" height="32px" loading="lazy"><a
