A boa notícia adicionada

--- a/index.html
+++ b/index.html
@@ -322,6 +322,23 @@
                                 title="Link Projeto" width="35px" height="35px" loading="lazy"></a>
                     </div>
                 </div>
+
+                <div class="grid-portfolio js-scroll js-scroll-direita">
+                    <div class="grid-portfolio-titulo"><label>A boa notícia</label></div>
+
+                    <img class="grid-portfolio-thumb" src="assets/A boa noticia.webp" alt="A boa notícia"
+                        title="Imagem Projeto Clínica" width="260px" height="350px" loading="lazy">
+
+                    <div class="grid-portfolio-links-projetos">
+                        <a class="link-projeto" href="https://fabiosousasi.github.io/a-boa-noticia/"
+                            target="_blank"><img src="assets/icons8-navegador-de-internet-50.png" alt="Link Projeto"
+                                title="Link Projeto" width="32px" height="32px" loading="lazy"></a>
+
+                        <a class="link-projeto" href="https://github.com/fabiosousasi/a-boa-noticia"
+                            target="_blank"><img src="assets/icons8-github-60.png" alt="Link Projeto"
+                                title="Link Projeto" width="35px" height="35px" loading="lazy"></a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
